# ax-distiller

./: .gitignore  .gitmodules  0.xml  1.xml  2.xml  3.xml  README.md  go.mod  go.sum
backend/: CMakeLists.txt  a.out  input copy.cu  input.cu
backend/lib/: hashmap.cpp  hashmap.hpp
cmd/analyze/: analyzer.go  loader.go  main.go  manager.go
cmd/ax-test/: main.go
cmd/collect/: collect.go  collect_actions.go  css.go  csstree.go  csstree_test.go  main.go  navigator.go  store.go
cmd/distill-test/: distill-debug.go  distill-filtering.go  distill-html.go  distill-md.go  main.go  out.json  utils.go
cmd/dnode-test/: 1.xml  2.xml  main.go  out.xml
cmd/dump-ax-tree/: main.go
cmd/event-test/: main.go  navigator.go  tree.go
cmd/gen-aria-types/: gen.sh  main.go  role_info.json
cmd/interact/: collect.go  main.go  store.go
cmd/print-gob/: main.go
cmd/setup/: main.go
cmd/test-extract/: main.go
cmd/test-site/: main.go
cmd/web-model/: main.go
examples/: drawabox_(with_gemini_postprocessing).md  drawabox_axtree_dump.xml  wikipedia_sample.md
lib/aria/: roles.go  types.go
lib/ax/: categories.go  cdp.go  cdp_easyjson.go  composite.go  diff.go  difftree.go  filters.go  navigator.go  page.go
lib/axextract/: ariacategories.go  cdp.go  cdp_easyjson.go  filters.go  navigator.go
lib/chrome/: ax.go  ax_categories.go  ax_cdp.go  ax_cdp_easyjson.go  ax_node.go  chrome.go  dom.go  filters.go  proto.go
lib/dnode/: ax.go  common.go  dnode.go  ho.go  keymap.go  proc.go
resources/: README.md  aria-types.txt  cdp-ax-nodes.json  roleInfo.js
viz/: index.html  index.js
(+24 files in other folders)
